Update swagger 3
